<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/data_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/gray"
        android:textAlignment="textEnd"
        android:textSize="25sp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toTopOf="@+id/result_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="gone"
        android:textColor="@color/light_gray"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                style="@style/signButton"
                android:id="@+id/btn_clear"
                android:onClick="onClearClick"
                android:text="@string/clear" />
            <com.google.android.material.button.MaterialButton
                style="@style/signButton"
                android:id="@+id/btn_back"
                android:onClick="onBackClick"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/black" />
            <com.google.android.material.button.MaterialButton
                style="@style/signButton"
                android:id="@+id/btn_modulo"
                android:onClick="onOperatorClick"
                android:text="@string/modulo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/operatorButton"
                android:onClick="onOperatorClick"
                android:text="@string/divide" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_7"
                android:onClick="onDigitClick"
                android:text="@string/_7" />
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_8"
                android:onClick="onDigitClick"
                android:text="@string/_8" />
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_9"
                android:onClick="onDigitClick"
                android:text="@string/_9" />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:id="@+id/btn_multiply"
                android:onClick="onOperatorClick"
                android:text="@string/multiply" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_4"
                android:onClick="onDigitClick"
                android:text="@string/_4" />
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_5"
                android:onClick="onDigitClick"
                android:text="@string/_5" />
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_6"
                android:onClick="onDigitClick"
                android:text="@string/_6" />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:id="@+id/btn_subtract"
                android:onClick="onOperatorClick"
                android:text="@string/subtract" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_1"
                android:onClick="onDigitClick"
                android:text="@string/_1" />
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_2"
                android:onClick="onDigitClick"
                android:text="@string/_2" />
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_3"
                android:onClick="onDigitClick"
                android:text="@string/_3" />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:id="@+id/btn_add"
                android:onClick="onOperatorClick"
                android:text="@string/add" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/signButton"
                android:id="@+id/btn_allClear"
                android:onClick="onAllClearClick"
                android:textSize="21sp"
                android:text="@string/allClear" />
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_0"
                android:onClick="onDigitClick"
                android:text="@string/_0" />
            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:id="@+id/btn_dot"
                android:onClick="onDigitClick"
                android:text="@string/dot" />
            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:id="@+id/btn_equal"
                android:onClick="onEqualClick"
                android:text="@string/equal" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>